added community endpoints

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -4,11 +4,15 @@ registry.admin.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night
 registry.harvest.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryHarvest
 
 #Applications Controller
-appController.endPoint=http://uml03.astrogrid.org:8080/astrogrid-applications-night/services/AdminService
+appController.endPoint=http://uml03.astrogrid.org:8080/astrogrid-applications-night/services/CommonExecutionConnectorService
 
 
 #Community
-community.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/AdminService
+community.securityservice.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/SecurityService
+community.securitymanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/SecurityManager
+community.policyservice.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/PolicyService
+community.policymanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/PolicyManager
+community.databasemanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/DatabaseManager
 
 #MySpace
 mySpaceEndPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/Manager
