--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -22,6 +22,8 @@ portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal-night/
 
 #Job Controller
 jobControlerEndPoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/
+jes.controller.endpoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/services/JobControllerService
+jes.monitor.endpoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/services/JobMonitorService
 
 #DataCentre
 stdDatacenterEndPoint=http://uml03.astrogrid.org:8080/astrogrid-pal-night/services/AxisDataServer
