changed key for myspace end point

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -15,7 +15,7 @@ community.policymanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-commu
 community.databasemanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/DatabaseManager
 
 #MySpace
-mySpaceEndPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/Manager
+myspace.manager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/Manager
 
 #Portal
 portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal-night/
