--- a/astrogrid/jes/xdocs/astrogrid.properties
+++ b/astrogrid/jes/xdocs/astrogrid.properties
@@ -18,9 +18,17 @@ jes.jobfactory=file
 #jes.jobfacory.filebasedir=
 
 # Endpoint of job monitor service - passed to application controller so it can callback with progress reports.
-# If left unspecified, will examine the server configuration to find the enpoint of the job monitor service.
+# If left unspecified, will examine the server configuration to find the enpoint of the job monitor service. (doesn't work very well at the moment)
 #jes.monitor.endpoint.url=
 
+# select the type of scheduling policy to use
+# possible values:
+#   linear - runs all steps sequentially, ignoring join conditions
+#   join - runs steps sequentially, obeying join conditions
+#   flow - runs steps in parallel wherever possible, obeys join conditions.
+#   java.class.name - instantiate this class, use it as a policy
+# defalt: join
+#jes.policy=
 
 # select the type of tool locator to use.
 # possible values:
