--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -30,6 +30,7 @@ maven.compile.source = 1.4
 maven.compile.target = 1.4
 maven.javadoc.source = 1.4
 maven.test.source = 1.4
+maven.junit.jvmargs=-ea
 
 #This is the default todo tag used in Eclipse
 maven.tasklist.taskTag=@TODO
