fixed address of portal.

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,7 +1,7 @@
-#Registry
-registry.registry.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/Registry
-registry.admin.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryAdmin
-registry.harvest.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryHarvest
+#Registry - see RegistryDelegateFactory
+org.astrogrid.registry.query.endpointt=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/Registry
+org.astrogrid.registry.admin.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryAdmin
+org.astrogrid.registry.harvest.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryHarvest
 
 #Applications Controller
 appController.endPoint=http://uml03.astrogrid.org:8080/astrogrid-applications-night/services/CommonExecutionConnectorService
@@ -18,7 +18,7 @@ community.databasemanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-com
 myspace.manager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/Manager
 
 #Portal
-portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal-night/
+portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal/
 
 #Job Controller
 jobControlerEndPoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/
