--- a/astrogrid/datacenter/server/test/java/org/astrogrid/datacenter/queriers/ogsadai/postgres-translations.properties
+++ b/astrogrid/datacenter/server/test/java/org/astrogrid/datacenter/queriers/ogsadai/postgres-translations.properties
@@ -2,11 +2,14 @@
 # warning - sadly the test these results are used in is very space sensitive..
 sample1.xml=SELECT * FROM first AS f LIMIT 100000;
 sample2.xml=SELECT f.ra, x.decl FROM first AS f, xmm1 AS x WHERE f.ra > x.ra AND f.decl < x.decl ORDER BY f.phot_flux_peak , x.M1_FLUX LIMIT 100000;
-sample3.xml=SELECT f.*, x.* FROM first AS f, xmm1 AS x WHERE f.ra && x.ra AND DEGREES(2 * ASIN( SQRT(POW(SIN(RADIANS((23.0-xmm1.decl)/2)), 2) + COS(RADIANS(23.0)) * COS(RADIANS(xmm1.decl)) * POW(SIN(RADIANS((12.5-xmm1.ra)/2),2)))) <5.0 ORDER BY f.phot_flux_peak - x.M1_FLUX , x.ra LIMIT 100000;
-sample4.xml=SELECT f.ra, x.decl FROM first AS f, xmm1 AS x HAVING f.ra && x.ra LIMIT 100000;
-sample5.xml=SELECT f.ra, x.* FROM first AS f, xmm1 AS x WHERE AVG(x.M1_FLUX ) < 4.56 ORDER BY x.M1_FLUX LIMIT 100000;
-sample6.xml=SELECT DISTINCT f.ra, x.* FROM first AS f, xmm1 AS x WHERE NOT (-(MAX(x.M1_FLUX ) ) < 4.56 ) GROUP BY f.ra HAVING x.M1_FILTER LIKE 'Thic%' OR x.M1_FLUX BETWEEN 0.01 AND 500.0 ORDER BY x.M1_FLUX DESC LIMIT 100000;
-overlappingcircles.xml=SELECT f.ra, f.decl, x.ra, x.decl FROM first AS f, xmm1 AS x WHERE f.errbox && x.errbox AND DEGREES(7200 * ASIN( SQRT(POW(SIN(RADIANS((f.decl-x.decl)/2)), 2) + COS(RADIANS(f.decl)) * COS(RADIANS(x.decl)) * POW(SIN(RADIANS((f.ra-x.ra)/2),2)))) <0.01 LIMIT 100000;
+sample2_fast.xml=SELECT f.ra, x.decl FROM first AS f, xmm1 AS x WHERE f.ra > x.ra AND f.decl < x.decl LIMIT 100000;
+sample3.xml=SELECT f.*, x.* FROM first AS f, xmm1 AS x WHERE f.errbox && x.errbox AND DEGREES(2 * ASIN( SQRT(POW(SIN(RADIANS((23.0-xmm1.decl)/2)), 2) + COS(RADIANS(23.0)) * COS(RADIANS(xmm1.decl)) * POW(SIN(RADIANS(12.5-xmm1.ra)/2),2)))) <5.0 ORDER BY f.phot_flux_peak - x.M1_FLUX , x.ra LIMIT 100000;
+sample3_fast.xml=SELECT f.*, x.* FROM first AS f, xmm1 AS x WHERE f.errbox && x.errbox AND DEGREES(2 * ASIN( SQRT(POW(SIN(RADIANS((23.0-xmm1.decl)/2)), 2) + COS(RADIANS(23.0)) * COS(RADIANS(xmm1.decl)) * POW(SIN(RADIANS(12.5-xmm1.ra)/2),2)))) <5.0 LIMIT 100000;
+sample4.xml=SELECT f.ra, x.decl FROM first AS f, xmm1 AS x HAVING f.errbox && x.errbox LIMIT 100000;
+sample5.xml=SELECT x.ra, x.decl FROM xmm1 AS x GROUP BY x.ra, x.decl HAVING AVG(x.M1_FLUX ) < 4.56 ORDER BY x.M1_FLUX LIMIT 100000;
+sample6.xml=SELECT DISTINCT x.ra, x.M1_FLUX, x.M1_FILTER FROM xmm1 AS x GROUP BY x.ra, x.M1_FLUX, x.M1_FILTER HAVING NOT (-(MAX(x.M1_FLUX ) ) < 4.56 ) AND x.M1_FILTER LIKE 'Thic%' OR x.M1_FLUX BETWEEN 0.01 AND 500.0 ORDER BY x.M1_FLUX DESC LIMIT 100000;
+sample6_fast.xml=SELECT DISTINCT x.ra, x.M1_FLUX, x.M1_FILTER FROM xmm1 AS x GROUP BY x.ra, x.M1_FLUX, x.M1_FILTER HAVING NOT (-(MAX(x.M1_FLUX ) ) < 4.56 ) AND x.M1_FILTER LIKE 'Thic%' OR x.M1_FLUX BETWEEN 0.01 AND 500.0 LIMIT 100000;
+overlappingcircles.xml=SELECT f.ra, f.decl, x.ra, x.decl FROM first AS f, xmm1 AS x WHERE f.errbox && x.errbox AND DEGREES(7200 * ASIN( SQRT(POW(SIN(RADIANS((f.decl-x.decl)/2)), 2) + COS(RADIANS(f.decl)) * COS(RADIANS(x.decl)) * POW(SIN(RADIANS(f.ra-x.ra)/2),2)))) <0.01 LIMIT 100000;
 geometricalregion.xml=SELECT ra, decl, phot_flux_int FROM first WHERE first.errbox && xmm1.errbox LIMIT 100000;
-conesearch.xml=SELECT first.* FROM first WHERE first.errbox && xmm1.errbox AND DEGREES(2 * ASIN( SQRT(POW(SIN(RADIANS((12.34-first.decl)/2)), 2) + COS(RADIANS(12.34)) * COS(RADIANS(first.decl)) * POW(SIN(RADIANS((123.45-first.ra)/2),2)))) <5.0 LIMIT 100000; 
-crossmatch.xml=SELECT f.*, x.* FROM first AS f, xmm1 AS x WHERE f.errbox && x.errbox AND DEGREES(7200 * ASIN( SQRT(POW(SIN(RADIANS((f.decl-x.decl)/2)), 2) + COS(RADIANS(f.decl)) * COS(RADIANS(x.decl)) * POW(SIN(RADIANS((f.ra-x.ra)/2),2)))) <3.0 LIMIT 100000;
+conesearch.xml=SELECT first.* FROM first WHERE first.errbox && xmm1.errbox AND DEGREES(2 * ASIN( SQRT(POW(SIN(RADIANS((12.34-first.decl)/2)), 2) + COS(RADIANS(12.34)) * COS(RADIANS(first.decl)) * POW(SIN(RADIANS(123.45-first.ra)/2),2)))) <5.0 LIMIT 100000; 
+crossmatch.xml=SELECT f.*, x.* FROM first AS f, xmm1 AS x WHERE f.errbox && x.errbox AND DEGREES(7200 * ASIN( SQRT(POW(SIN(RADIANS((f.decl-x.decl)/2)), 2) + COS(RADIANS(f.decl)) * COS(RADIANS(x.decl)) * POW(SIN(RADIANS(f.ra-x.ra)/2),2)))) <3.0 LIMIT 100000;
