--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,5 +1,5 @@
 #Registry - see RegistryDelegateFactory
-org.astrogrid.registry.query.endpointt=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/Registry
+org.astrogrid.registry.query.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/Registry
 org.astrogrid.registry.admin.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryAdmin
 org.astrogrid.registry.harvest.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryHarvest
 
