The location of the checkstyle file is defined.  This overrides the inherited location because the latter doesn't work in sub-projects.

--- a/astrogrid/security/sample/project.properties
+++ b/astrogrid/security/sample/project.properties
@@ -33,3 +33,5 @@ maven.compile.target=1.4
 maven.xdoc.version=${pom.currentVersion}
 
 maven.multiproject.type=jar
+
+maven.checkstyle.properties=${basedir}/../../maven-base/checkstyle.xml
