--- a/astrogrid/integrationTests/auto-integration/project.properties
+++ b/astrogrid/integrationTests/auto-integration/project.properties
@@ -4,4 +4,4 @@ tomcat.manager.password=secret
 work.dir=c:\ag-integration-work
 tomcat.common.lib.dir=c:\jakarta-tomcat-5.0.19\common\lib
 
-maven.repo.remote=http://www.astrogrid.org/maven/
+maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
