added the registry properties

--- a/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
+++ b/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
@@ -29,4 +29,16 @@ ApplicationConfigFile=/var/lib/tomcat5/webapps/astrogrid-configuration/TestAppli
 ##
 ## More to come here.
 ##
+#This is the authorityid that this registry manages.  The current authority id here is is coordination with the
+#sample registry.xml file.
+org.astrogrid.registry.authorityid=org.test.localhost.registry
+
+#Normally you just need to change the url piece.
+registry.exist.db.uri=xmldb:exist://localhost:8080/exist/xmlrpc
+
+#current version of this registry.
+org.astrogrid.registry.version=0_9
+
+#next line is currently not needed.
+org.astrogrid.registry.debug=true
 
