Portal settings added

--- a/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
+++ b/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
@@ -26,9 +26,26 @@ WorkingDirectory=@WORKDIR@/applications
 # rats - wants a file. hard-code until paul fixes this.
 ApplicationConfigFile=/var/lib/tomcat5/webapps/astrogrid-configuration/TestApplicationConfig.xml
 
-##
-## More to come here.
-##
+#####
+### Portal configuration
+###
+####
+
+# required for login...
+org.astrogrid.portal.registry.url=@TOMCATROOT@/astrogrid-registry-SNAPSHOT/services/Registry
+
+# required for workflow (standalone for now)... 
+workflow.jes.endpoint=@TOMCATROOT@/astrogrid-jes-SNAPSHOT/services/JobControllerService
+workflow.store=file
+workflow.store.file.basedir=@WORKDIR@/workflow
+workflow.applist=xml
+workflow.applist.xml.url=@CONFIGPATH@/ApplicationRegistry.xml
+
+#####
+### Registry configuration
+###
+####
+
 #This is the authorityid that this registry manages.  The current authority id here is is coordination with the
 #sample registry.xml file.
 org.astrogrid.registry.authorityid=org.test.localhost.registry
@@ -42,3 +59,6 @@ org.astrogrid.registry.version=0_9
 #next line is currently not needed.
 org.astrogrid.registry.debug=true
 
+##
+## More to come here.
+##
