--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
@@ -66,7 +66,8 @@
   </resource-ref>
   -->
 
-  <env-entry>
+  <!--think of an alternative - this will keep repopulating the JNDI environment variables with
+  this key even if the user deletes the entry env-entry>
       <description>URL giving location of the properties file to use for configuration</description>
       <env-entry-name>org.astrogrid.config.filename</env-entry-name>
       <env-entry-value>${catalina.home}/conf/datacenter.properties</env-entry-value>
