added endpoints for the registry

--- a/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
+++ b/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
@@ -53,6 +53,11 @@ org.astrogrid.registry.authorityid=org.test.localhost.registry
 #Normally you just need to change the url piece.
 registry.exist.db.uri=xmldb:exist://localhost:8080/exist/xmlrpc
 
+org.astrogrid.registry.admin.endpoint=http://localhost:8080/astrogrid-registry-SNAPSHOT/services/RegistryAdmin
+org.astrogrid.registry.harvest.endpoint=http://localhost:8080/astrogrid-registry-SNAPSHOT/services/RegistryHarvest
+org.astrogrid.registry.query.endpoint=http://localhost:8080/astrogrid-registry-SNAPSHOT/services/Registry
+
+
 #current version of this registry.
 org.astrogrid.registry.version=0_9
 
