added config for client side.

--- a/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
+++ b/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
@@ -1,6 +1,12 @@
 ## Astrogrid global configuration.
 
 ##
+## Client / Integration testing properties
+##
+# configuration file used on client side - by tests that use the scripting interface
+scripting.service.list.url=@CONFIGPATH@/services.xml
+
+##
 ## JES
 ##
 
