renamed the portal website property

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -18,7 +18,7 @@ community.databasemanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-com
 myspace.manager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/Manager
 
 #Portal
-portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal/
+org.astrogrid.portal.site=http://uml03.astrogrid.org:8080/astrogrid-portal/
 
 #Job Controller
 jobControlerEndPoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/
