--- a/astrogrid/portal/base/site/WEB-INF/web.xml
+++ b/astrogrid/portal/base/site/WEB-INF/web.xml
@@ -9,7 +9,10 @@
     "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
 
 <web-app>
-
+  <display-name>Astrogrid Portal</display-name>
+  <description>
+    A cocoon-based portal for accessing the Astrogrid components
+  </description>
   <!-- Servlet Configuration ========================================== -->
 
   <servlet>
