tests are now on twmbarlwm

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,33 +1,33 @@
 #Registry - see RegistryDelegateFactory
-org.astrogrid.registry.query.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/Registry
-org.astrogrid.registry.admin.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryAdmin
-org.astrogrid.registry.harvest.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryHarvest
+org.astrogrid.registry.query.endpoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-registry-SNAPSHOT/services/Registry
+org.astrogrid.registry.admin.endpoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-registry-SNAPSHOT/services/RegistryAdmin
+org.astrogrid.registry.harvest.endpoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-registry-SNAPSHOT/services/RegistryHarvest
 
 #Applications Controller
-appController.endPoint=http://uml03.astrogrid.org:8080/astrogrid-applications-night/services/CommonExecutionConnectorService
+appController.endPoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-applications-SNAPSHOT/services/CommonExecutionConnectorService
 
 
 #Community
-community.securityservice.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/SecurityService
-community.securitymanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/SecurityManager
-community.policyservice.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/PolicyService
-community.policymanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/PolicyManager
-community.databasemanager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/DatabaseManager
+community.securityservice.endPoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-community-SNAPSHOT/services/SecurityService
+community.securitymanager.endPoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-community-SNAPSHOT/services/SecurityManager
+community.policyservice.endPoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-community-SNAPSHOT/services/PolicyService
+community.policymanager.endPoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-community-SNAPSHOT/services/PolicyManager
+community.databasemanager.endPoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-community-SNAPSHOT/services/DatabaseManager
 
 #MySpace
-myspace.manager.endPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/Manager
+myspace.manager.endPoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-mySpace-SNAPSHOT/services/Manager
 
 #Portal
-org.astrogrid.portal.site=http://uml03.astrogrid.org:8080/astrogrid-portal/
+org.astrogrid.portal.site=http://twmbarlwm.astrogrid.org:8080/astrogrid-portal/
 
 #Job Controller
-jobControlerEndPoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/
-jes.controller.endpoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/services/JobControllerService
-jes.monitor.endpoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/services/JobMonitorService
+jobControlerEndPoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-jes-SNAPSHOT/
+jes.controller.endpoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-jes-SNAPSHOT/services/JobControllerService
+jes.monitor.endpoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-jes-SNAPSHOT/services/JobMonitorService
 
 #DataCentre
-stdDatacenterEndPoint=http://uml03.astrogrid.org:8080/astrogrid-pal-night/services/AxisDataServer
-#merlinDatacenterEndPoint=http://uml03.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
+stdDatacenterEndPoint=http://twmbarlwm.astrogrid.org:8080/astrogrid-pal-SNAPSHOT/services/AxisDataServer
+#merlinDatacenterEndPoint=http://twmbarlwm.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
 
 
 
