the applicationConf file pointer can now be a url.

--- a/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
+++ b/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
@@ -28,9 +28,7 @@ jes.monitor.endpoint.url=@TOMCATROOT@/astrogrid-jes-SNAPSHOT/services/JobMonitor
 
 WorkingDirectory=@WORKDIR@/applications
 
-#ApplicationConfigFile=@CONFIGPATH@/TestApplicationConfig.xml
-# rats - wants a file. hard-code until paul fixes this.
-ApplicationConfigFile=/var/lib/tomcat5/webapps/astrogrid-configuration/TestApplicationConfig.xml
+ApplicationConfigFile=@CONFIGPATH@/TestApplicationConfig.xml
 
 #####
 ### Portal configuration
