tidied up build properties.

--- a/astrogrid/integrationTests/auto-integration/project.properties
+++ b/astrogrid/integrationTests/auto-integration/project.properties
@@ -1,7 +1,10 @@
-# Change these to suit your test system.
-tomcat.manager.username=fred
-tomcat.manager.password=secret
-work.dir=c:\ag-integration-work
-tomcat.common.lib.dir=c:\jakarta-tomcat-5.0.19\common\lib
+## Define these to suit your test system - either here, or in ~/build.properties.
+#tomcat.manager.username=fred
+#tomcat.manager.password=secret
+#work.dir=c:\ag-integration-work
+#tomcat.common.lib.dir=c:\jakarta-tomcat-5.0.19\common\lib
 
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
+
+## fork junit - makes classloading more reliable.
+maven.junit.fork=true
