--- a/astrogrid/applications/test/java/log4j.properties
+++ b/astrogrid/applications/test/java/log4j.properties
@@ -1,4 +1,4 @@
-# $Id: log4j.properties,v 1.10 2004/03/23 12:51:26 pah Exp $
+# $Id: log4j.properties,v 1.11 2004/04/14 13:19:48 pah Exp $
 # Author: JDT
 ############################################################################################
 #
@@ -22,10 +22,10 @@ log4j.appender.LOGFILE.Append=FALSE
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
 
-log4j.rootCategory=ERROR, CONSOLE,LOGFILE
+log4j.rootCategory=DEBUG, CONSOLE,LOGFILE
 
 #switch the digester messages down... 
-log4j.logger.org.apache.commons.digester.Digester=ERROR
+log4j.logger.org.apache.commons.digester.Digester=INFO
 log4j.logger.org.apache.commons.beanutils=OFF
-log4j.logger.org.apache.axis=ERROR
+log4j.logger.org.apache.axis=DEBUG
 
