removed unused workflow entries, cleaned up registry configuration entries

--- a/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
+++ b/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
@@ -38,10 +38,8 @@ ApplicationConfigFile=@CONFIGPATH@/TestApplicationConfig.xml
 # required for login...
 org.astrogrid.portal.registry.url=@TOMCATROOT@/astrogrid-registry-SNAPSHOT/services/Registry
 
-# required for workflow (standalone for now)... 
+# required for workflow (standalone for now)...
 workflow.jes.endpoint=@TOMCATROOT@/astrogrid-jes-SNAPSHOT/services/JobControllerService
-workflow.store=file
-workflow.store.file.basedir=@WORKDIR@/workflow
 workflow.applist=xml
 workflow.applist.xml.url=@CONFIGPATH@/ApplicationRegistry.xml
 
@@ -57,9 +55,9 @@ org.astrogrid.registry.authorityid=org.test.localhost.registry
 #Normally you just need to change the url piece.
 registry.exist.db.uri=xmldb:exist://localhost:8080/exist/xmlrpc
 
-org.astrogrid.registry.admin.endpoint=http://localhost:8080/astrogrid-registry-SNAPSHOT/services/RegistryAdmin
-org.astrogrid.registry.harvest.endpoint=http://localhost:8080/astrogrid-registry-SNAPSHOT/services/RegistryHarvest
-org.astrogrid.registry.query.endpoint=http://localhost:8080/astrogrid-registry-SNAPSHOT/services/Registry
+org.astrogrid.registry.admin.endpoint=@TOMCATROOT@/astrogrid-registry-SNAPSHOT/services/RegistryAdmin
+org.astrogrid.registry.harvest.endpoint=@TOMCATROOT@/astrogrid-registry-SNAPSHOT/services/RegistryHarvest
+org.astrogrid.registry.query.endpoint=@TOMCATROOT@/astrogrid-registry-SNAPSHOT/services/Registry
 
 
 #current version of this registry.
@@ -67,7 +65,3 @@ org.astrogrid.registry.version=0_9
 
 #next line is currently not needed.
 org.astrogrid.registry.debug=true
-
-##
-## More to come here.
-##
