application controller updates

--- a/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
+++ b/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
@@ -27,7 +27,7 @@ jes.monitor.endpoint.url=@TOMCATROOT@/astrogrid-jes-SNAPSHOT/services/JobMonitor
 ####
 
 WorkingDirectory=@WORKDIR@/applications
-
+RegistryAdminEndpoint=@TOMCATROOT@/astrogrid-registry-SNAPSHOT/services/RegistryAdmin
 ApplicationConfigFile=@CONFIGPATH@/TestApplicationConfig.xml
 
 #####
